# rust-stardict

./: Cargo.toml  README.md
src/: dict.rs  dictionary.rs  idx.rs  ifo.rs  lib.rs  util.rs
src/stardict/: consult_option.rs  consult_result.rs  dict_content.rs  dict_index.rs  dict_info.rs  dictionary.rs  library.rs  mod.rs  sd_error.rs  util.rs
