[package]
name = "rust-stardict"
version = "0.3.1"
edition = "2021"

[dependencies]
anyhow = "1"
regex = "1"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0.0"
rayon = "1.7.0"
edit-distance = "2.1.0"
